prior to fixing font-size-jump

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -22,6 +22,7 @@ section {
   padding-inline: 2.5rem;
   height: auto;
   min-height: 100vh;
+  /* height: max(100vh, 100%);*/
 }
 
 section:nth-of-type(4) {
@@ -125,7 +126,7 @@ p {
 #loading-phone {
   position: absolute;
   bottom: 20%;
-  width: 80%;
+  width: 70%;
   padding: 14px 18px;
   display: flex;
   align-items: center;
@@ -355,6 +356,8 @@ p {
 @media screen and (min-width: 1440px) {
 }
 
+/* TODO remove min height on safari */
+
 @media screen and (min-width: 1024px) {
   /* h1 text to epxand until 1920 max fs */
   h1.hero {
@@ -373,6 +376,43 @@ p {
   h2.hero {
     margin-bottom: 4%;
     font-size: clamp(1.25rem, 0.393rem + 1.339vw, 2rem);
+  }
+}
+
+
+.object-cover {
+  width:70%;
+  margin-inline: auto;
+}
+
+
+/* TODO font of button */
+.blacked.only-desktop span {
+  font-size: 20px;
+}
+
+.left-bottom-two .blacked {
+  font-size: 20px;
+}
+
+
+#heading-svg-thingy > svg {
+  display: inline-block;
+  width: clamp(3.75rem, 2.4rem + 6.75vw, 10.5rem);
+  height: auto;
+}
+
+#heading-svg-thingy-large {
+  width: clamp(4.375rem, 0.292rem + 8.507vw, 10.5rem);
+  height: auto;
+  display: inline-block;
+  margin-left: 10%;
+}
+
+
+@media screen and (max-width:1024px) {
+  #heading-svg-thingy-large {
+  margin-left: 0;
   }
 }
 
@@ -399,6 +439,7 @@ p {
   }
 
   .icon-and-h2 h2 {
+    font-weight: 600;
   }
 
   .grid-item p {
@@ -484,7 +525,6 @@ p {
   footer {
     margin-top: -20px;
   }
-
 }
 
 /* TODO mobile version */
@@ -629,7 +669,7 @@ p {
   }
 
   #loading-phone {
-    min-width: 100%;
+    min-width: 70%;
   }
 
   .card {
